--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -11,7 +11,7 @@
 \newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.4.0-Darwin.dmg}
 \newcommand{\KnimeUpdateSite}{http://update.knime.com/analytics-platform/3.7}
 \newcommand{\KnimeTrustedSite}{http://update.knime.com/community-contributions/trusted/3.7}
-\newcommand{\KnimeTrunkSite}{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/knime-plugin/updateSite/RC/2.4.0/}
+\newcommand{\KnimeTrunkSite}{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/knime-plugin/updateSite/nightly/}
 \newcommand{\KnimeUSBUpdateSite}{file:/KNIMEUpdateSite/2.4.0/}
 
 \setcounter{equation}{0}
