--- a/Handout/gettingstarted.tex
+++ b/Handout/gettingstarted.tex
@@ -8,7 +8,7 @@
 \newcommand{\WindowsPrerequisitesLink}{http://sourceforge.net/projects/open-ms/files/OpenMS/OpenMS-2.4/OpenMS-2.4-prerequisites-installer.exe/download}
 \newcommand{\WindowsDefaultPWizFolder}{C: / Program\ Files / OpenMS-2.4.0 / share / OpenMS / THIRDPARTY / pwiz-bin}
 \newcommand{\MacKnimeInstallerName}{Mac / knime\_3.7.2.app.macosx.cocoa.x86\_64.dmg}	
-\newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.4.0-Darwin.dmg}
+\newcommand{\MacOpenMSInstallerName}{Mac / OpenMS-2.4.0-macOS.dmg}
 \newcommand{\KnimeUpdateSite}{http://update.knime.com/analytics-platform/3.7}
 \newcommand{\KnimeTrustedSite}{http://update.knime.com/community-contributions/trusted/3.7}
 \newcommand{\KnimeTrunkSite}{https://abibuilder.informatik.uni-tuebingen.de/archive/openms/knime-plugin/updateSite/nightly/}
