--- a/Handout/handout.tex
+++ b/Handout/handout.tex
@@ -274,11 +274,11 @@
 
 \include{metabolomics}
 
-%\include{openswath}
+\include{openswath}
 
 \include{pyopenms}
 
-%\include{qualitycontrol}
+\include{qualitycontrol}
 
 \include{troubleshooting}
 
